--- a/style.css
+++ b/style.css
@@ -169,3 +169,31 @@ a{
   color: white;
   text-decoration: none;
 }
+.Yes{
+  font-size: 30px;
+  text-decoration: none;
+  color: white;
+  margin:10 10 10 10px;
+  margin-top: 100px;
+  margin-left: -100px;
+  height: 60px;
+  text-align: center;
+  width: 200px;
+  padding-bottom:20px;
+  padding-top: 5px;
+  border: 5px solid white;
+}
+.No{
+  font-size: 30px;
+  text-decoration: none;
+  color: white;
+  margin:10 10 10 10px;
+  margin-top: 100px;
+  margin-left: 20px;
+  height: 60px;
+  text-align: center;
+  width: 200px;
+  padding-bottom:20px;
+  padding-top: 5px;
+  border: 5px solid white;
+}
