--- a/style.css
+++ b/style.css
@@ -70,6 +70,100 @@ body{
   margin-left: 100px;
   text-decoration: underline;
 }
+.normal-head{
+  font-size: 55px;
+  margin-top: -700px;
+  margin-left: 5px;
+  width: 500px;
+  color: white;
+  text-decoration: underline;
+  text-align: center;
+}
+.talentHome{
+  width:400px;
+  font-size: 20px;
+  color: white;
+  margin-top: 30px;
+  margin-left: -870px;
+  text-align: center;
+  border-radius: 10px;
+  background-color: #FC6D6D;
+}
+.list{
+  margin-left: -300px;
+font-size: 25px;
+color: white;
+width: 500px;
+margin-top: -250px;
+}
+.list ul li{
+  text-decoration: none;
+  font-size: 20px;
+}
+
+.list-2{
+  margin-left: 50px;
+  margin-top:-220px;
+font-size: 25px;
+color: white;
+width: 500px;
+}
+.list-2 li{
+  text-decoration: none;
+  font-size: 20px;
+}
+h1{
+  text-decoration: underline;
+  color: white;
+  width: 100%;
+}
+.list-3{
+  margin-left: -1055px;
+  margin-top:550px;
+font-size: 25px;
+color: white;
+width: 500px;
+margin-bottom: 30px;
+}
+.list-3 li{
+  text-decoration: none;
+  font-size: 20px;
+}
+
+.list-4{
+  margin-left: 55px;
+  margin-top:520px;
+font-size: 25px;
+color: white;
+width: 500px;
+}
+.list-4 li{
+  text-decoration: none;
+  font-size: 20px;
+}
+.talentHome-2{
+  width:500px;
+  font-size: 20px;
+  color: white;
+  margin-top: -62px;
+  margin-left: -450px;
+  text-align: center;
+  border-radius: 10px;
+  background-color: #FC6D6D;
+}
+.Colleges{
+  width:900px;
+  font-size: 20px;
+  color: white;
+  margin-top: 580px;
+  margin-left: -820px;
+  text-align: center;
+  border-radius: 30px;
+  border: 3px solid black;
+  background-color: #84c5fe;
+  margin-bottom: 30px;
+  padding-left: 20px;
+}
 .word{
   margin-left: -480px;
   margin-top: -100px;
@@ -81,6 +175,7 @@ body{
   padding-top: 20px;
   padding-bottom: 20px;
   font-size: 40px;
+  border-radius: 10px;
 }
 .word-test{
   margin-left: -780px;
@@ -93,6 +188,7 @@ body{
   padding-top: 20px;
   padding-bottom: 20px;
   font-size: 40px;
+  border-radius: 10px;
 }
 .question{
   color: #fff;
@@ -101,7 +197,6 @@ body{
   text-align: center;
   margin-left: -200px;
 }
-
 .heading{
   font-size: 50px;
   color: White;
@@ -197,8 +292,6 @@ a{
   padding-top: 5px;
   border: 5px solid white;
 }
-/* importing google fonts */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
 *{
     margin: 0;
     padding: 0;
